[package]
name = "oampris"
authors = ["Aman Khanna (nekename)"]
license = "MIT"
version = "1.0.0"
edition = "2021"

[dependencies]
openaction = "1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
zbus = "3"
zvariant = "3"
futures-util = "0.3"
simplelog = "0.12"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
infer = "0.19"
